# TD-BEM

./: CMakeLists.txt  LICENSE  README.md
FE-BE Matlab/: BEM_averaging.m  FE_BE_driver.m  Find_Interface_FE_BE.m  MapVector.m  Reorder_FE_Interface.m  Reorder_Matrix.m  Reorder_Vector.m  WriteVTK_BEM_lin.m  WriteVTK_FEM_lin.m
geometry/: Bar_1.txt~  Bar_2.txt  Bar_2.txt~  Bar_4_20_linear_double_node.txt  Bar_550_linear.txt  Bar_550_linear.txt~  Bar_550_quad.txt  Buried_Cavity_1.txt  Buried_Cavity_1.txt~  Buried_Cavity_Jiang.txt  Buried_Cavity_Jiang.txt~  Buried_Cavity_Jiang_2.txt  Buried_Cavity_Jiang_2.txt~  Buried_Cavity_Jiang_4.txt~  Cylind_Bar_lin.txt  Cylind_Bar_lin_double_node.txt  Cylind_Bar_quad.txt  Cylind_Bar_quad_2.txt  HalfSpaceCavity_1.txt  HalfSpaceCavity_96E.txt  HalfSpacePlane_1E.txt  HalfSpaceSphericalCavity_1.txt  HalfSpace_Coda.txt  Layer_B.txt  Layer_B.txt~  Layer_B_test.txt  Layer_B_test.txt~  Layer_B_test0.txt  Layer_B_test0.txt~  Layer_U.txt  Layer_U.txt~  Layer_U_test.txt  Layer_U_test.txt~  Layer_U_test0.txt  Layer_U_test0.txt~  PlaneSurface_1.txt~  SphericalCavity_1.txt  SphericalCavity_1.txt~  SphericalCavity_2.txt~  SphericalCavity_3.txt  (+2 more)
src/: CMakeLists.txt  ElastoDynamicsT.cpp  ElastoDynamicsT.h  GreenFunctionT.cpp  GreenFunctionT.h  InputT.cpp  InputT.h  KelvinT.cpp  KelvinT.h  MathOperationT.cpp  MathOperationT.h  ModelManagerT.cpp  ModelManagerT.h  ShapeFunctionT.cpp  ShapeFunctionT.h  SolverHeavisideLinearT.cpp  SolverHeavisideLinearT.h  SolverMRT.cpp  SolverMRT.h  SolverStepLinearT.cpp  SolverStepLinearT.h  SolverT.cpp  SolverT.h  (+9 more)
(+14 files in other folders)
